fetch cards and create containers

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <a href="#" id="form-view">Form</a>
       <a href="#" id="card-view">Cards</a>
     </div>
-    <div class="form-container">
+    <!-- <div class="form-container">
       <div class="fc-width-fixer">
         <h2>Please Fill in Your Form</h2>  
         <form method="get" id="formElement">
@@ -64,9 +64,12 @@
           <input type="text" />
         </form>
       </div>
-    </div>
-    <div>
-      <div></div>
+    </div> -->
+    <div class="card-container">
+      <div>
+        <h2>View Items</h2>
+      </div>
+      <div class="card-content"></div>
     </div>
   </div>
 </html>
