add filter functionality to card view

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- mid navbar -->
         <div class="search-bar">
           <div class="sb-width-fixer">
-            <input type="text" placeholder="Filter Search" />
+            <input type="text" placeholder="Filter Items" class="text-filter"/>
             <a href="">
               <i class="fas fa-search"></i>
             </a>
@@ -66,9 +66,9 @@
       </div>
     </div> -->
     <div class="card-container">
-      <div>
+      <!-- <div>
         <h2>View Items</h2>
-      </div>
+      </div> -->
       <div class="card-content"></div>
     </div>
   </div>
