--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
       <nav class="nav-bar">
         <!-- left navbar -->
         <div class="logo">
-          <img
-            src="https://uploads-ssl.webflow.com/6097e0eca1e87557da031fef/609859a191abe5d64b17fed3_Patika%20logo-p-500.png"
-            alt="patika-logo"
-          />
+          <a href="https://www.patika.dev/" target="_blank">
+            <img
+              src="https://uploads-ssl.webflow.com/6097e0eca1e87557da031fef/609859a191abe5d64b17fed3_Patika%20logo-p-500.png"
+              alt="patika-logo"
+          /></a>
         </div>
 
-        <!-- mid navbar -->
+        <!-- center navbar -->
         <div class="search-bar">
           <div class="sb-width-fixer">
-            <input type="text" placeholder="Filter Items" class="text-filter"/>
-            <a href="">
+            <input type="text" placeholder="Filter Items" class="text-filter" />
+            <a href="#">
               <i class="fas fa-search"></i>
             </a>
           </div>
@@ -36,7 +37,7 @@
 
         <!-- right navbar -->
         <div class="profile-icon">
-          <a href="">
+          <a href="https://github.com/ogunakar9" target="_blank">
             <i class="fas fa-users"></i>
           </a>
         </div>
