--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       <a href="#" id="form-view">Form</a>
       <a href="#" id="card-view">Cards</a>
     </div>
-    <!-- <div class="form-container">
+    <div class="form-container">
       <div class="fc-width-fixer">
-        <h2>Please Fill in Your Form</h2>  
+        <h2>Please Fill in Your Form</h2>
         <form method="get" id="formElement">
-            <label for="name">Name</label>
-          <input type="text" id="name" name="name" required/>
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" required />
           <input type="text" />
           <input type="text" />
           <input type="text" />
@@ -65,7 +65,7 @@
           <input type="text" />
         </form>
       </div>
-    </div> -->
+    </div>
     <div class="card-container">
       <!-- <div>
         <h2>View Items</h2>
