see formdata input on console

--- a/index.html
+++ b/index.html
@@ -54,16 +54,22 @@
     </div>
     <div class="form-container">
       <div class="fc-width-fixer">
-        <h2>Please Fill in Your Form</h2>
-        <form method="get" id="formElement">
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" required />
-          <input type="text" />
-          <input type="text" />
-          <input type="text" />
-          <input type="text" />
-          <input type="text" />
-        </form>
+      <h2>Please Fill In Your Form</h2>
+      <form method="get" id="formElement">
+        <label for="bootcamp">Bootcamp:</label>
+        <input id="bootcamp" name="Bootcamp" type="text" />
+        <label for="fname">First Name:</label>
+        <input id="fname" name="First Name" type="text" />
+        <label for="lname">Last Name:</label>
+        <input id="lname" name="Last Name" type="text" />
+        <label for="email">Email Address:</label>
+        <input id="email" name="Email Address" type="email" />
+        <label for="title">Title:</label>
+        <input id="title" name="Title" type="text" />
+        <label for="phone">Phone:</label>
+        <input id="phone" name="Phone" type="text" />
+        <button class="form-submitBtn">Submit</button>
+      </form>
       </div>
     </div>
     <div class="card-container">
