resolve todos, add toggler styling, card animation, reset input on cardview

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
   <div class="bottom-container">
     <div class="toggle-container">
-      <a href="#" id="form-view">Form</a>
-      <a href="#" id="card-view">Cards</a>
+      <button id="form-view">Form</a>
+      <button id="card-view">Cards</a>
     </div>
     <div class="form-container">
       <div class="fc-width-fixer">
