--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         <input id="title" name="Title" type="text" />
         <label for="phone">Phone:</label>
         <input id="phone" name="Phone" type="text" />
+        <label>Please tell us what you think about our bootcamp:
+          <textarea name="" id="comments" ></textarea>
+         </label>
         <button class="form-submitBtn">Submit</button>
       </form>
       </div>
