--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ciceksepeti HW1-PureJs & SASS</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js" defer></script>
     <link
@@ -46,7 +46,7 @@
 
     <!-- modal -->
     <div class="modal-container">
-      <a href="#" class="fa fa-close" id="closeModal"></a>
+      <a href="#" class="fas fa-window-close" id="closeModal"></a>
       <div class="modal-content"></div>  
     </div>
 
